[tool.poetry]
name = "latex-renderer"
version = "0.1.0"
description = "Convert simple LaTeX equations to high-quality PNG images"
authors = ["Yusuke Watanabe <ywatanabex@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "latex_renderer"}]
homepage = "https://github.com/ywatanabex/latex-renderer"
repository = "https://github.com/ywatanabex/latex-renderer"
keywords = ["latex", "math", "equation", "renderer", "png"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"
Pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
latex-renderer = "latex_renderer.cli:main"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"
quote-style = "double" 